# http/openapi.yaml
@@ -14,6 +14,8 @@ paths:
       summary: Search messages for a group
       operationId: searchMessages
       tags: [search]
+      security:
+        - TgAuth: [ ]
       requestBody:
         required: true
         content:
@@ -36,6 +38,8 @@ paths:
       summary: Get basic info for multiple users
       operationId: getUsersInfo
       tags: [users]
+      security:
+        - TgAuth: [ ]
       requestBody:
         required: true
         content:
@@ -221,6 +225,9 @@ components:
         username:
           type: string
           nullable: true
+        error:
+          type: string
+          nullable: true
     UserInfoResponse:
       type: object
       required: [users]
@@ -235,3 +242,8 @@ components:
       properties:
         message:
           type: string
+  securitySchemes:
+    TgAuth:
+      type: apiKey
+      in: header
+      name: X-Telegram-Init-Data
